# publicdata_ca

./: .gitignore  DOCUMENTATION_UPDATE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  SOLUTION_SUMMARY.md  TESTING_STATCAN_FIX.md  create_mvp_issues.sh  pyproject.toml  test_statcan_manual.py
data/: .gitignore
examples/: datasetref_usage_demo.py
notebooks/: 00_ingest_plan.ipynb  01_ingest_statcan.ipynb  02_ingest_cmhc.ipynb  03_ingest_clean.ipynb  04_features_index.ipynb  05_pca.ipynb  06_clustering.ipynb
profiles/: README.md  housing.yaml
publicdata_ca/: __init__.py  catalog.py  cli.py  datasets.py  http.py  manifest.py  normalize.py  profiles.py  provenance.py  provider.py  url_cache.py
publicdata_ca/providers/: __init__.py  boc_valet.py  ckan.py  cmhc.py  open_canada.py  sdmx.py  socrata.py  statcan.py
publicdata_ca/resolvers/: cmhc_landing.py
tests/: TESTING.md  __init__.py  test_boc_valet_provider.py  test_catalog.py  test_ckan_provider.py  test_cli.py  test_cmhc_fixtures.py  test_cmhc_landing.py  test_cmhc_provider.py  test_fetch_dataset.py  test_http.py  test_manifest.py  test_open_canada_provider.py  test_provenance.py  test_provider.py  test_provider_contracts.py  test_provider_smoke.py  test_refresh.py  test_sdmx_provider.py  test_socrata_provider.py  test_statcan.py  test_statcan_fixtures.py
tests/fixtures/boc_valet/: FXUSDCAD_metadata.json  FXUSDCAD_observations.json
tests/fixtures/ckan/: package_response.json  search_response.json
tests/fixtures/cmhc/: sample_landing_page.html
tests/fixtures/open_canada/: search_response.json
(+5 files in other folders)
