[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "publicdata-ca"
version = "0.1.0"
description = "Tools for discovering, resolving, and downloading Canadian public datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Drew Harris" }
]
keywords = ["canada", "open-data", "statcan", "cmhc", "catalog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pandas>=2.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=4.1"]

[project.scripts]
publicdata = "publicdata_ca.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["publicdata_ca*"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not smoke'"
testpaths = ["tests"]
markers = [
  "smoke: marks tests as smoke tests (deselected by default, use -m smoke to run)"
]
